increase perm ten space for hosted mode