@@ -136,7 +136,7 @@
                     <runTarget>App.html</runTarget>
                     <warSourceDirectory>war</warSourceDirectory>
                     <!--bindAddress>192.168.0.12</bindAddress-->
-                    <extraJvmArgs>-Xmx512m -DDEBUG</extraJvmArgs>
+                    <extraJvmArgs>-Xmx512m -DDEBUG -XX:MaxPermSize=256M</extraJvmArgs>
                     <servicePattern>**/*Service.java</servicePattern>
                     <style>OBF</style>
                     <hostedWebapp>war</hostedWebapp>
